# tenant_ai_chatbo_platform_chat_service

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: cd-production.yml  cd-staging.yml  ci.yml
docs/: API.md  CONTRIBUTING.md  DEPLOYMENT.md  README.md
k8s/: deployment.yaml
scripts/: health_check.sh  setup.sh  start.sh  test.sh
src/: __init__.py  dependencies.py  main.py
src/api/: __init__.py
src/api/middleware/: __init__.py  auth_middleware.py  error_handler.py  logging_middleware.py  rate_limit_middleware.py  tenant_middleware.py
src/api/responses/: __init__.py  error_responses.py
src/api/v2/: __init__.py  chat_routes.py  conversation_routes.py  health_routes.py  session_routes.py  tenants_routes.py  webhook_routes.py
src/api/validators/: __init__.py  common_validators.py  conversation_validators.py  message_validators.py
src/config/: __init__.py  constants.py  database_config.py  redis_config.py  settings.py
src/core/: __init__.py  exceptions.py
src/core/channels/: __init__.py  base_channel.py  channel_factory.py  messenger_channel.py  slack_channel.py  web_channel.py  whatsapp_channel.py
src/core/normalizers/: __init__.py  content_normalizer.py  message_normalizer.py  metadata_normalizer.py
src/core/processors/: __init__.py  base_processor.py  location_processor.py  media_processor.py  processor_factory.py  text_processor.py
src/database/: __init__.py  health_checks.py  mongodb.py  postgresdb.py  redis_client.py
src/exceptions/: __init__.py  base_exceptions.py  channel_exceptions.py  service_exceptions.py  validation_exceptions.py
src/models/: __init__.py  base_model.py  types.py
src/models/mongo/: __init__.py  conversation_model.py  message_model.py  session_model.py
src/models/postgres/: __init__.py  tenant_model.py  webhook_model.py
src/models/redis/: __init__.py  conversation_state.py  rate_limit_cache.py  session_cache.py
src/models/schemas/: __init__.py  request_schemas.py  response_schemas.py  tenant_webhook_request_schemas.py  validation_schemas.py
src/repositories/: __init__.py  base_repository.py  conversation_repository.py  exceptions.py  message_repository.py  mongo_repository.py  rate_limit_repository.py  redis_repository.py  session_repository.py  tenant_repository.py  webhook_repository.py
src/services/: __init__.py  audit_service.py  base_service.py  channel_service.py  conversation_service.py  delivery_service.py  exceptions.py  message_service.py  service_container.py  session_service.py  tenant_service.py  webhook_service.py
src/utils/: __init__.py  date_utils.py  dependencies.py  encryption.py  formatters.py  id_generator.py  logger.py  metrics.py  validators.py
